--- a/OOP/build.xml
+++ b/OOP/build.xml
@@ -2,9 +2,9 @@
 <!-- ===================================================================================
      GALWAY-MAYO INSTITUTE OF TECHNOLOGY 
      
-     Copyright 2015. 		<Your Name>
+     Copyright 2015. 		<Thomas McNamara
      						B.Sc. in Software Development
-							<your id>@gmit.ie
+							<G00314495>@gmit.ie
      						Object-Oriented Programming
      						
      						A Multi-threaded Cypher Breaker
@@ -19,7 +19,7 @@
 	<!-- Declare global properties (name/value pairs) for this build -->
 
 	
-	<property name="user.name" value="Your ID"/>
+	<property name="user.name" value="G00314495"/>
 	
 	<property name="org.name" value="Galway-Mayo Institute of Technology"/>
 	<property name="app.name" value="A Multi-threaded Cypher Breaker"/>
